# appropos-cli

./: Cargo.toml
.github/workflows/: build.yml
src/: bundles.rs  main.rs
