[package]
name = "apropos-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
plist = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
itertools = "0.14"
cli-colors = "1.0.0"
